<?xml version="1.0" encoding="utf-8"?>
<restrictions xmlns:android="http://schemas.android.com/apk/res/android">
    <restriction
        android:key="ad_realm"
        android:title="@string/mdm_realm_title"
        android:description="@string/mdm_realm_description"
        android:restrictionType="string" />
    <restriction
        android:key="username"
        android:title="@string/username"
        android:description="@string/mdm_username_description"
        android:restrictionType="string" />
    <restriction
        android:key="enable_http_kerberos"
        android:title="@string/mdm_enable_http_kerberos_title"
        android:description="@string/mdm_enable_http_kerberos_description"
        android:defaultValue="true"
        android:restrictionType="bool" />
    <restriction
        android:key="enable_http_ntlm"
        android:title="@string/mdm_enable_http_ntlm_title"
        android:description="@string/mdm_enable_http_ntlm_description"
        android:defaultValue="false"
        android:restrictionType="bool" />
    <restriction
        android:key="ntlm_domain"
        android:title="@string/mdm_ntlm_domain_title"
        android:description="@string/mdm_ntlm_domain_description"
        android:restrictionType="string" />
    <restriction
        android:key="enable_shares"
        android:title="@string/mdm_enable_shares_title"
        android:description="@string/mdm_enable_shares_description"
        android:defaultValue="true"
        android:restrictionType="bool" />
    <restriction
        android:key="shares"
        android:title="@string/mdm_shares_title"
        android:description="@string/mdm_shares_description"
        android:restrictionType="bundle_array">
        <restriction android:key="share" android:title="@string/mdm_share_bundle" android:restrictionType="bundle">
            <restriction android:key="id" android:title="@string/mdm_share_id" android:restrictionType="string" />
            <restriction android:key="display_name" android:title="@string/mdm_share_display_name" android:restrictionType="string" />
            <restriction android:key="host" android:title="@string/mdm_share_host" android:restrictionType="string" />
            <restriction android:key="port" android:title="@string/mdm_share_port" android:defaultValue="445" android:restrictionType="integer" />
            <restriction android:key="share_name" android:title="@string/mdm_share_name" android:restrictionType="string" />
            <restriction
                android:key="start_path"
                android:title="@string/mdm_share_start_path"
                android:description="@string/mdm_share_start_path_description"
                android:restrictionType="string" />
        </restriction>
    </restriction>
    <restriction
        android:key="kdc_hosts"
        android:title="@string/mdm_kdc_hosts"
        android:description="@string/mdm_kdc_hosts_description"
        android:restrictionType="string" />
    <restriction
        android:key="http_spn_mappings"
        android:title="@string/mdm_http_spn_mappings"
        android:description="@string/mdm_http_spn_mappings_description"
        android:restrictionType="bundle_array">
        <restriction android:key="http_spn_mapping" android:title="@string/mdm_http_spn_mapping" android:restrictionType="bundle">
            <restriction android:key="request_host" android:title="@string/mdm_http_request_host" android:restrictionType="string" />
            <restriction android:key="spn_host" android:title="@string/mdm_http_spn_host" android:restrictionType="string" />
        </restriction>
    </restriction>
    <restriction
        android:key="require_smb_encryption"
        android:title="@string/mdm_require_encryption"
        android:description="@string/mdm_require_encryption_description"
        android:defaultValue="true"
        android:restrictionType="bool" />
    <restriction
        android:key="allow_local_cache"
        android:title="@string/mdm_allow_cache"
        android:defaultValue="false"
        android:restrictionType="bool" />
    <restriction
        android:key="allow_screenshots"
        android:title="@string/mdm_allow_screenshots"
        android:defaultValue="false"
        android:restrictionType="bool" />
    <restriction
        android:key="support_contact"
        android:title="@string/mdm_support_contact"
        android:restrictionType="string" />
</restrictions>
